Fix broken layout of work environment page

--- a/public_html/html/css/style.less
+++ b/public_html/html/css/style.less
@@ -774,6 +774,8 @@ h3 {
 	.container {
 		.col-xs-6 {
 			margin-bottom: 30px;
+			min-height: 500px;
+			overflow: hidden;
 		}
 	}
 }
